--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h1>Novorus</h1>
         </div>
         <div class="header-tabs">
-            <a href="https://novorus.craftingstore.net/">Home</a>
+            <a href="https://julius2828.github.io/Novorus/Homepage">Home</a>
             <a href="#wiki">Wiki</a>
             <a href="https://novorus.craftingstore.net/category/450741">Support</a></font>
             <a href="https://novorus.craftingstore.net/category/450744">Stats</a>
