--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <h1>Novorus</h1>
         </div>
         <div class="header-tabs">
-            <a href="https://julius2828.github.io/Novorus/Homepage">Home</a>
-            <a href="#wiki">Wiki</a>
-            <a href="https://novorus.craftingstore.net/category/450741">Support</a></font>
-            <a href="https://novorus.craftingstore.net/category/450744">Stats</a>
-            <a href="https://novorus.craftingstore.net/category/450747">Shop</a>
+            <a href="https://julius2828.github.io/Novorus/Homepage"><b>Home</b></a>
+            <a href="https://julius2828.github.io/Novorus/"><b>Wiki</b></a>
+            <a href="https://novorus.craftingstore.net/category/450741"><b>Support</b></a>
+            <a href="https://novorus.craftingstore.net/category/450744"><b>Stats</b></a>
+            <a href="https://novorus.craftingstore.net/category/450747"><b>Shop</b></a>
         </div>
 		</header>
         <center><h1><b>Novorus Wiki</b></h1></center>
@@ -628,11 +628,11 @@
     </main>
     <footer class="footer">
         <div class="footer-tabs">
-            <a href="#kontakt">Kontakt</a>
-            <a href="#nutzungsbedingungen">Nutzungsbedingungen</a>
-            <a href="#datenschutz">Datenschutz</a>
-            <a href="#hilfe">Hilfe</a>
-            <a href="#impressum">Impressum</a>
+            <a href="#kontakt"><b>Kontakt</b></a>
+            <a href="#nutzungsbedingungen"><b>Nutzungsbedingungen</b></a>
+            <a href="#datenschutz"><b>Datenschutz</b></a>
+            <a href="#hilfe"><b>Hilfe</b></a>
+            <a href="#impressum"><b>Impressum</b></a>
         </div>
         <div class="about-us">
             <h2>Über uns</h2>
