--- a/Homepage.html
+++ b/Homepage.html
@@ -128,7 +128,7 @@
             <h1>Novorus</h1>
         </div>
         <div class="header-tabs">
-            <a href="https://novorus.craftingstore.net/"><b>Home</b></a>
+            <a href="https://julius2828.github.io/Novorus/Homepage"><b>Home</b></a>
             <a href="https://julius2828.github.io/Novorus/"><b>Wiki</b></a>
             <a href="https://novorus.craftingstore.net/category/450741"><b>Support</b></a>
             <a href="https://novorus.craftingstore.net/category/450744"><b>Stats</b></a>
