--- a/KontaktFormular.html
+++ b/KontaktFormular.html
@@ -98,7 +98,7 @@
 
         .form-group input,
         .form-group textarea {
-            width: 100%;
+            width: 95%;
             padding: 15px;
             border: 1px solid #ddd;
             border-radius: 4px;
@@ -114,7 +114,7 @@
         button {
             background-color: #007bff;
             color: #fff;
-            padding: 15px 20px;
+            padding: 10px 20px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
@@ -173,7 +173,7 @@
             <a href="#impressum"><b>Impressum</b></a>
         </div>
         <div class="about-us">
-            <h2><b>Über uns</b></h2>
+            <h2 style="color:gold"><b>Über uns</b></h2>
             <p>Wir sind ein Team aus drei Leuten, die mit den vorhandenen Minecraft-Servern unzufrieden waren. Daher haben wir beschlossen, unseren eigenen Server zu erstellen, der unsere Vorstellung von einem qualitativ hochwertigen Server widerspiegelt.</p>
             <p>Novorus ist ein Communityprojekt, das 2024 gestartet wurde.</p>
         </div>
