--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
     </main>
     <footer class="footer">
         <div class="footer-tabs">
-            <a href="#kontakt"><b>Kontakt</b></a>
+            <a href="https://julius2828.github.io/Novorus/KontaktFormulart"><b>Kontakt</b></a>
             <a href="#nutzungsbedingungen"><b>Nutzungsbedingungen</b></a>
             <a href="#datenschutz"><b>Datenschutz</b></a>
             <a href="#hilfe"><b>Hilfe</b></a>
