--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     
     <script type="module">
-        import WebStats from "https://github.com/Julius2828/Novorus/blob/main/WebStats-dist.js";
+        import WebStats from "./github.com/Julius2828/Novorus/blob/main/WebStats-dist.js";
         
         window.addEventListener("load", () => {
             const stats = new WebStats({
